--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,6 @@
 <h1>Welcome to Dealership Central</h1>
 <a href="/dealerships">See Dealership List</a>
 <a href="/dealerships/new">Add New Dealership</a>
+
+<a href="/vehicles">See Vehicle List</a>
+<a href="/dealership/:id/vehicle/new">Add New Vehicle</a>
